--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,17 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3001",
-            "webRoot": "${workspaceFolder}"
+            "url": "http://localhost:3333",
+            "webRoot": "${workspaceFolder}/client"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch API Server",
+            "program": "${workspaceFolder}/server/server.js", // replace with your server's entry point
+            "env": {
+                "PORT": "5000"
+            }
         }
     ]
 }
