--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,6 @@ jobs:
 
     - name: Build and run containers
       run: |
-        docker-compose down
-        docker-compose build
-        docker-compose up -d
+        docker compose down
+        docker compose build
+        docker compose up -d
