--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,31 @@
-name: Deploy to Raspberry Pi
+name: Build and Push Docker Compose Services
 
 on:
   push:
+    branches:
+      - main  # Trigger on push to the main branch
+  pull_request:
     branches:
       - main
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Build and run containers
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to DockerHub
+      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Build and push Docker Compose images
       run: |
-        docker compose down
-        docker compose build
-        docker compose up -d
+        docker-compose -f docker-compose.yml build
+        docker-compose -f docker-compose.yml push
+
+    - name: Logout from DockerHub
+      run: docker logout
