--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,6 +1,8 @@
 # Use an official Node.js image as the base image
 FROM node:18-alpine
 
+RUN apk add --no-cache python3 make g++
+
 # Set the working directory inside the container
 WORKDIR /app
 
