--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,10 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Pull the latest images
+      run: |
+        docker pull dedeco133/duckolympics-frontend:latest
+        docker pull dedeco133/duckolympics-backend:latest
 
     - name: Deploy with Docker Compose
-      run: docker compose -f ./docker-compose.yml up -d --build
+      run: docker compose -f ./docker-compose.yml up -d
