--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,20 +1,32 @@
-# Use an official Node.js image as the base image
-FROM node:18-alpine
+# Stage 1: Build the Node.js application
+FROM node:18-alpine AS build
 
+# Install build dependencies
 RUN apk add --no-cache python3 make g++
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the package.json and install dependencies
-COPY package.json ./
-RUN npm install
+# Copy the package.json and package-lock.json if available
+COPY package.json package-lock.json* ./
+
+# Install dependencies
+RUN npm install --production
 
 # Copy the rest of the application code
 COPY . .
 
 # Create the uploads directory
 RUN mkdir -p /app/uploads
+
+# Stage 2: Create the final lightweight image
+FROM node:18-alpine
+
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy only the necessary files from the build stage
+COPY --from=build /app /app
 
 # Expose the port the app runs on
 EXPOSE 4000
