--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,5 +1,5 @@
-# Use an official Node.js image as the base image
-FROM node:18-alpine
+# Stage 1: Build the React application
+FROM node:18-alpine AS build
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -14,8 +14,17 @@ COPY . .
 # Build the React application
 RUN npm run build
 
-# Expose the port the app runs on
-EXPOSE 3000
+# Stage 2: Serve the React application using Nginx
+FROM nginx:alpine
 
-# Command to run the app
-CMD ["npm", "start"]
+# Copy the built React app from the previous stage to the Nginx public directory
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Copy custom Nginx configuration, if any (optional)
+# COPY nginx.conf /etc/nginx/nginx.conf
+
+# Expose the port Nginx will serve on
+EXPOSE 80
+
+# Start Nginx server
+CMD ["nginx", "-g", "daemon off;"]
