--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,19 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Build and push frontend image
+    - name: Build and push multi-platform frontend image
       uses: docker/build-push-action@v4
       with:
         context: ./frontend
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: dedeco133/duckolympics-frontend:latest
 
-    - name: Build and push backend image
+    - name: Build and push multi-platform backend image
       uses: docker/build-push-action@v4
       with:
         context: ./backend
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: dedeco133/duckolympics-backend:latest
 
