--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,7 +15,7 @@ server {
 
     # Proxy API requests to the backend service
     location /api/ {
-        proxy_pass http://backend:4000/;  # Proxy to the backend service
+        proxy_pass http://localhost:4000/;  # Proxy to the backend service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
