--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -21,6 +21,8 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy the build output from the previous stage to the Nginx html directory
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
 
 # Expose port 80 to the outside world
