--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   frontend:
     image: dedeco133/duckolympics-frontend:latest  # Image pulled from Docker Hub
+    container_name: frontend
     ports:
       - "8080:80"  # Map host port 8080 to container port 3000
     depends_on:
@@ -11,6 +12,7 @@ services:
 
   backend:
     image: dedeco133/duckolympics-backend:latest  # Image pulled from Docker Hub
+    container_name: backend
     ports:
       - "4000:4000"
     depends_on:
