--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,34 @@
 server {
     listen 80;
+    server_name localhost;
 
-    # Serve the React app's static files
+    # Serve the static files from the build directory
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;  # Ensure React app handles routing
+        try_files $uri /index.html;
     }
 
-    # Serve the /admin page
-    location /admin {
-        try_files $uri $uri/ /index.html;  # Serve index.html for the /admin route
-    }
-
-    # Proxy API requests to the backend service
+    # Proxy API requests to the backend container
     location /api/ {
-        proxy_pass http://localhost:4000;  # Proxy to the backend service
+        rewrite ^/api/(.*)$ /$1 break;
+        proxy_pass http://backend:4000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Handle requests for static assets
+    location /static/ {
+        root /usr/share/nginx/html;
+        expires max;
+        add_header Cache-Control "public";
+    }
+
+    # Error handling
+    error_page 404 /index.html;
+    
+    # Optional: Logging configuration
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
