--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,12 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:
+    - name: Checkout only docker-compose.yml
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 1
+        sparse-checkout: 'docker-compose.yml'
+        
     - name: Pull the latest images
       run: |
         docker pull dedeco133/duckolympics-frontend:latest
