fix upload image

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # Increase the maximum allowed size for client requests
+    client_max_body_size 999M;  # Adjust this value based on your needs
+
     # Serve the static files from the build directory
     location / {
         root /usr/share/nginx/html;
