--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,7 +5,7 @@ server {
     # Increase the maximum allowed size for client requests
     client_max_body_size 999M;  # Adjust this value based on your needs
 
-    # Serve the static files from the build directory
+    # Serve the static files from the build directory (e.g., React frontend)
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
@@ -13,7 +13,6 @@ server {
 
     # Proxy API requests to the backend container
     location /api/ {
-        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://backend:4000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -21,7 +20,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Handle requests for static assets
+    # Serve uploads (static assets) directly
+    location /uploads/ {
+        alias /app/uploads/;  # This assumes uploads are stored in /app/uploads in the backend container
+        access_log off;
+        expires max;
+        add_header Cache-Control "public";
+    }
+
+    # Optional: Serve other static assets with long cache times
     location /static/ {
         root /usr/share/nginx/html;
         expires max;
@@ -30,7 +37,7 @@ server {
 
     # Error handling
     error_page 404 /index.html;
-    
+
     # Optional: Logging configuration
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
