--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,12 +1,14 @@
-# Step 1: Build the React application
+# Stage 1: Build the Node.js application
 FROM node:18-alpine AS build
+
+# Install build dependencies
+RUN apk add --no-cache python3 make g++
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the package.json and package-lock.json/yarn.lock (if present) to install dependencies
-COPY package.json ./
-COPY package-lock.json ./
+# Copy the package.json and package-lock.json if available
+COPY package.json package-lock.json* ./
 
 # Install dependencies
 RUN npm install --production
@@ -14,19 +16,23 @@ RUN npm install --production
 # Copy the rest of the application code
 COPY . .
 
-# Build the React application
-RUN npm run build
+# Create the uploads directory (ensure this exists for storing files)
+RUN mkdir -p /app/uploads
 
-# Step 2: Serve the React app with Nginx
-FROM nginx:alpine
+# Stage 2: Create the final lightweight image
+FROM node:18-alpine
 
-# Copy the build output from the previous stage to the Nginx html directory
+# Set the working directory inside the container
+WORKDIR /app
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/build /usr/share/nginx/html
+# Copy only the necessary files from the build stage
+COPY --from=build /app /app
 
-# Expose port 80 to the outside world
-EXPOSE 80
+# Expose the port the app runs on
+EXPOSE 4000
 
-# Command to start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Set the environment variable for the upload directory
+ENV UPLOAD_DIR=/app/uploads
+
+# Command to run the backend API
+CMD ["npm", "start"]
