--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,14 +1,14 @@
-# Stage 1: Build the Node.js application
+# Step 1: Build the React application
 FROM node:18-alpine AS build
-
-# Install build dependencies
-RUN apk add --no-cache python3 make g++
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the package.json and package-lock.json if available
-COPY package.json package-lock.json* ./
+# Copy the package.json and package-lock.json/yarn.lock (if present) to install dependencies
+COPY package.json ./
+COPY package-lock.json ./
+
+ENV UPLOAD_DIR=/app/uploads
 
 # Install dependencies
 RUN npm install --production
@@ -16,23 +16,19 @@ RUN npm install --production
 # Copy the rest of the application code
 COPY . .
 
-# Create the uploads directory (ensure this exists for storing files)
-RUN mkdir -p /app/uploads
+# Build the React application
+RUN npm run build
 
-# Stage 2: Create the final lightweight image
-FROM node:18-alpine
+# Step 2: Serve the React app with Nginx
+FROM nginx:alpine
 
-# Set the working directory inside the container
-WORKDIR /app
+# Copy the build output from the previous stage to the Nginx html directory
 
-# Copy only the necessary files from the build stage
-COPY --from=build /app /app
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose the port the app runs on
-EXPOSE 4000
+# Expose port 80 to the outside world
+EXPOSE 80
 
-# Set the environment variable for the upload directory
-ENV UPLOAD_DIR=/app/uploads
-
-# Command to run the backend API
-CMD ["npm", "start"]
+# Command to start Nginx
+CMD ["nginx", "-g", "daemon off;"]
