--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,2 +1,5 @@
 PORT=4000
 MONGODB_URL=mongodb://192.168.13.50:27017/duckdb
+SSL_KEY_PATH=./certs/chain.pem
+SSL_CERT_PATH=./certs/chain.pem
+SSL_CA_PATH=./certs/chain.pem
