--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,19 @@ services:
     image: dedeco133/duckolympics-backend:latest  # Image pulled from Docker Hub
     container_name: backend
     ports:
-      - "4000:4000"  # Expose port 4000 for the backend service
+      - "4000:4000"  # Expose port 4000 internally (matches the forwarded port on the router)
     depends_on:
       - db
     environment:
       - PORT=4000  # Port the backend listens to
       - MONGODB_URL=mongodb://db:27017/duckdb  # MongoDB connection string
       - UPLOAD_DIR=/app/uploads  # Environment variable for upload directory
+      - SSL_KEY_PATH=/app/certs/chain.pem  # Path to the SSL private key
+      - SSL_CERT_PATH=/app/certs/chain.pem  # Path to the SSL certificate
+      - SSL_CA_PATH=/app/certs/chain.pem  # Path to the SSL chain file (if any)
     volumes:
       - uploads:/app/uploads  # Mount the uploads directory for persistent storage
+      - /home/pi/certs:/app/certs  # Mount the certs directory from host to container
     restart: unless-stopped
 
   db:
