--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        REACT_APP_API_BASE_URL: "http://cadeopato.redirectme.net:8084"
+        REACT_APP_API_BASE_URL: "https://cadeopato.redirectme.net"
       
 
     - name: Set up Docker Buildx
