--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "patolimpiadas-casaes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andrecasaes.github.io",
+  "homepage": "https://cadeopato.app.br",
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
