--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "gh-pages": "^6.1.1",
     "mui-swipeable-list-item": "^0.3.2",
     "particles.js": "^2.0.0",
