--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         cd frontend
-        npm install
+        npm install --legacy-peer-deps
         npm run build
         npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
       env:
